# gob-nano

./: .flake8  .gitignore  MANIFEST.in  Makefile  README.md  TASKS.md  VERSION_DISPLAY_README.md  fix_embeddings.py  gob.sh  nano.sh  pyproject.toml  setup.py
.a0proj/: project.json
.a0proj/instructions/: early_brainstorming_alignment.md
.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
.github/workflows/: ci.yml
.gob/logs/: exec_20260401T154525.json  exec_20260401T154659.json  exec_20260401T155030.json  exec_20260401T155110.json
config/: config.yaml
config/agents/: default.yaml
docker/: .dockerignore  Dockerfile  docker-compose.sandbox.yml  docker-compose.yml  entrypoint.sh  sandbox.Dockerfile
docs/: README.md  architecture.md  configuration.md  development.md  faq.md  git-workflow.md  quick-start.md  tools.md
scripts/: __init__.py  auto_version_bump.sh  auto_version_bump.sh.backup  auto_version_bump_auto.sh  build.py  create_feature_branch.sh  git_hooks_installer.sh  gob-global.sh  gob-universal.sh  gob.sh  install-gob.sh  install.sh  lint.py  merge_safely.sh  migrate.py  run_sandbox.sh  run_tests.sh  setup-complete.sh  setup.py  test.py  utils.py  version_display.sh  version_display_enhanced.sh  version_manager.sh
src/gob/: __init__.py  __main__.py  main.py  orchestrator.py  run_gob.py  version.py
src/gob/core/: __init__.py  autopsy.py  config_loader.py  llm_client.py  logger.py  orchestrator.py  setup_wizard.py  tool_loader.py
src/gob/core/memory/: __init__.py  memory.db  memory.py
src/gob/helpers/: __init__.py  agent_loader.py  config_loader.py  llm_client.py  setup_wizard.py  tool_loader.py
src/gob/helpers/memory/: memory.py
src/gob/interfaces/: discord_bot.py  tui_chat.py
src/gob/io/: tui_chat.py
src/gob/tools/: code_execution.py  create_skill.py  document_query.py  response.py  search_engine.py  text_editor.py
src/gob/ux/: __init__.py  tui_chat.py
src/nano/: main.py  orchestrator.py
src/nano/helpers/: agent_loader.py  config_loader.py  llm_client.py  tool_loader.py
src/nano/helpers/memory/: __init__.py  memory.jsonl  memory.py
src/nano/interfaces/: discord_bot.py  tui_chat.py
src/nano/tools/: __init__.py  code_execution.py  response.py  search_engine.py
tests/: __init__.py  test_config.py  test_main.py  test_orchestrator.py
