[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gob"
version = "0.1.0"
description = "Gradient Observation Bridge - Minimal Discord AI Agent for Edge Devices"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "dusty-schmidt"}]
license = {text = "MIT"}
keywords = ["discord", "ai", "agent", "edge-device"]


# Console scripts entry point - enables 'gob' CLI command after pip install
[project.scripts]
gob = "src.gob.main:main_entry"
# Console scripts entry point - enables 'gob' CLI command after pip install
[project.scripts]
gob = "src.gob.main:main_entry"

# Dev dependencies
[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "flake8>=6.0"]

# Package configuration
[tool.setuptools.packages.find]
where = ["src"]
