[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gob"
version = "1.0.0"
description = "GOB - Minimal AI agent framework"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "dusty-schmidt"}]
license = {text = "MIT"}
keywords = ["ai", "agent", "minimal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "numpy>=1.24.0",
]

# Optional heavy dependencies
[project.optional-dependencies]
search = ["duckduckgo-search>=5.0"]
embeddings = ["sentence-transformers>=2.2.0", "faiss-cpu>=1.7.3"]
all = ["duckduckgo-search>=5.0", "sentence-transformers>=2.2.0", "faiss-cpu>=1.7.3"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0"]

# Console entry point
[project.scripts]
gob = "gob.run_gob:main_entry"

# Package configuration
[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
